# ol-logger-python

./: README.md  pyproject.toml
docs/: conf.py  index.rst  modules.rst  ollogger.rst
src/ollogger/: __init__.py  core.py  settings.py
stubs/: json_log_formatter.pyi
tests/: test_exports.py  test_ollogger.py
