[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]


[project]
name = "ollogger"
description = ""
authors = [
    {name = "osoken"},
]
dynamic = [
    "version", 
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: Japanese",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "oltl @ git+https://github.com/osoekawaitlab/ol-type-library",
    "pydantic",
    "pydantic_settings",
    "json_log_formatter",
]

[project.urls]
Source = "https://github.com/osoekawaitlab/ol-logger-python"

[tool.setuptools]
packages=["ollogger"]

[tool.setuptools.package-data]
oltl = ["py.typed"]

[project.optional-dependencies]
dev=[
    "black",
    "flake8",
    "pyproject-flake8",
    "pytest",
    "mypy",
    "tox",
    "isort",
    "pytest-mock",
    "pytest-cov",
    "pytest-random-order",
    "freezegun",
]
prod=[
]
docs=[
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-autodoc-typehints",
    "autodoc_pydantic",
]


[tool.pytest.ini_options]
addopts = ["-sv", "--random-order", "--capture=sys", "--doctest-modules", "--cov=src/ollogger", "--cov-report=xml", "--cov-report=term-missing"]
testpaths = ["tests", "src/ollogger"]
filterwarnings = [
    "error",
]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.flake8]
max-line-length = 120
extend-ignore = "E203,E701"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
mypy_path = "stubs/"

[tool.pydantic.mypy]
init_typed = true

[tool.isort]
profile = "black"

[tool.tox]
legacy_tox_ini = """
    [tox]
    skipsdist = true
    envlist = py310

    [testenv]
    setenv = 
        VIRTUALENV_PIP = 24.0
    deps =
        -e .[dev]
    commands = 
        black src/ollogger tests
        isort src/ollogger tests
        pytest
        pflake8 src/ollogger/ tests/ stubs/
        mypy src/ollogger/ --strict --show-traceback
        mypy tests --strict

    [testenv:docs]
    deps = 
        -e .[docs]
    commands =
        sphinx-apidoc -o docs/ src/ollogger
        sphinx-build -b html docs/ docs/_build
"""
